# cursor-api

./: .env.example  .gitignore  .rustfmt.toml  Cargo.toml  Cross.toml  Dockerfile  HEARTBEAT.md  LICENSE.md  MODEL_CALL_ID_REUSE.md  README.md  build.rs  build_info.rs  config.example.toml  cursor-agent-verification-guide.md  cursor-api-agent-analysis.md  cursor-api-agent-implementation-example.rs  cursor-api-agent-quickstart.md  cursor-api-agent-test.py  test-cursor-agent-simple.py  test-cursor-official-api.py
.cargo/: config.toml
.github/workflows/: build.yml
__build/: Cargo.toml  rustfmt.toml
__build/src/: _marco.rs  lib.rs  once.rs  version.rs
__build/src/infos/: build.rs  platform.rs
__build/src/variables/: build_timestamp.rs  cfg_feature.rs  is_preview.rs  manifest_dir.rs  out_dir.rs  pkg_version.rs  version_number.rs
crates/byte_str/: Cargo.toml
crates/byte_str/src/: lib.rs  serde_impls.rs
crates/grpc-stream/: Cargo.toml
crates/grpc-stream/src/: buffer.rs  compression.rs  decoder.rs  frame.rs  lib.rs
crates/interned/: Cargo.toml
crates/interned/src/: arc_str.rs  lib.rs  str.rs
crates/manually_init/: Cargo.toml
crates/proto-value/: Cargo.toml
crates/rep_move/: Cargo.toml
crates/rep_move/src/: lib.rs
patch/chrono-0.4.42/: Cargo.toml
patch/chrono-0.4.43/: Cargo.toml
patch/macros/: Cargo.toml
patch/prost-0.14.1/: Cargo.toml
patch/prost-derive/: Cargo.toml
patch/prost-derive/src/: lib.rs
patch/prost-derive/src/field/: group.rs  map.rs  message.rs  oneof.rs  scalar.rs
patch/prost-types/: Cargo.toml
patch/prost-types/src/: duration.rs  lib.rs  timestamp.rs  type_url.rs
patch/reqwest-0.12.18/: Cargo.toml
patch/rkyv-0.8.12/: Cargo.toml
patch/scc-3.4.8/: CHANGELOG.md  Cargo.toml  README.md
scripts/: build.sh  minify.js  package-lock.json
src/: app.rs  common.rs  decoder.rs  leak.rs  lib.rs  main.rs  message.rs  models.rs  natural_args.rs
src/app/: config.rs  constant.rs  frontend.rs  lazy.rs  model.rs  route.rs
src/common/: client.rs  model.rs  time.rs  utils.rs
src/core/: adapter.rs  auth.rs  config.rs  constant.rs  error.rs  model.rs  route.rs  service.rs  session.rs  stream.rs
src/leak/: arc.rs  manually_init.rs
static/: api.html  config.html  logs.html  shared.js  tokens.html
(+188 files in other folders)
